objects/smlfcom__SML_Dimension_Label_Mappin__mdt.object
<CustomObject>
    <fields>
        <fullName>smlfcom__Chart_Type__c</fullName>
        <label>Chart Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Waterfall</fullName>
                    <default>true</default>
                    <label>Waterfall</label>
                </value>
                <value>
                    <fullName>Flow</fullName>
                </value>
                <value>
                    <fullName>custom_trendline</fullName>
                </value>
                <value>
                    <fullName>Forecast_Details</fullName>
                </value>
                <value>
                    <fullName>Quarterly_Summary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smlfcom__Dimension_API_Name__c</fullName>
        <label>Dimension API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Dimension_Label__c</fullName>
        <label>Dimension Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Is_Linked_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Linked Field?</label>
        <type>Checkbox</type>
    </fields>
    <label>SML Dimension Label Mapping</label>
    <pluralLabel>SML Dimension Label Mappings</pluralLabel>
</CustomObject>